# task_manager

./: .env  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  init.sql
.sqlx/: query-3959f7c6e09d5b652b720161c8d9560a543964d0ea1f1a3a133bc226300fa5d4.json  query-3f56b07a90c36c72d9a3f95942c1fb289fe85d6bdeaf30270c14b125515ae8a5.json  query-53f0d05592afd388500801438353f031edaa5e8232d2121e99185203e5d4ce74.json  query-8bc6392130ffa6e441c46a2e250d0f497bc54eca2b9070d7c9872f256cdfbd07.json  query-c3a1bc045e49322f224695890af121726097fd3efe13075daa016d0110fffe14.json  query-e1709465c6c7bd50f7f260055347b3e877de93eaa966e50cce9134c64567e207.json  query-f812ca944da237f7a7e816b440544a43be3a0aa74f53f475d413376e7bbd4607.json  query-f9a1161c41774a8bb9263e7bc6a1510e1658286926cc4e0661cb6bbae71d98a8.json
migrations/: 20240826220527_taskmanager.sql  20240827184201_create_user_tables.sql  20240828171040_add_category_to_tasks.sql  20240828233740_create_users.sql  20240828233750_create_tasks.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  websocket.rs
src/models/: mod.rs  task.rs  user.rs
task-manager-frontend/: README.md  package-lock.json  package.json
task-manager-frontend/src/: App.vue
task-manager-frontend/src/router/: index.js
task-manager-frontend/src/views/: HomeView.vue  LoginView.vue  RegisterView.vue  TasksView.vue
