[package]
name = "task-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "ws"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "time", "migrate"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.3"
bcrypt = "0.15"
axum-test = "15.6.0"
thiserror = "1.0.63"
futures = "0.3"
tokio-tungstenite = "0.20"
url = "2.5.2"
http = "1.1.0"

[build-dependencies]
sqlx-cli = "0.7"
